--- a/ejercicio 1/ejercicio1.html
+++ b/ejercicio 1/ejercicio1.html
@@ -1,6 +1,6 @@
 <DOCTYPE html>
-
- <html class="no-js"> 
+    
+ <html lang="es" class="no-js"> 
 
     <head>
         <meta charset="utf-8">
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel García Lindo">
         <meta name="keywords" content="hola, mundo,hello,hi">
+        <link rel="stylesheet" href="../css/estilo1.css">
     </head>
     <body>
          <div>
