--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Tim Berners-Lee</title>
-        <meta name="description" content="">
+        <meta name="description" content="creado con Visual Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
