4 mayo complet fin fin

--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -10,7 +10,7 @@
     <body>
          <h1>Sir Timothy "Tim" John Berners-Lee</h1>  
             <h2>El padre de la Web</h2>
-            <img src="/ejercicio 2/berners-lee.jpg">
+            <img src="/ejercicio 2/berners-lee.jpg" alt="foto de John Berners-Lee">
           <p>TBL es un científico de la computación británico, nacido en Londres, Reino Unido, el 8 de junio de 1955. </p>
         <p>Es conocido como el padre de la Web, desde que estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989, mientras trabajaba en el <a href="">CERN</a></p>
         <p>Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee y su grupo desarrollaron las ideas fundamentales que estructuran la web:</p>
