4 de mayo complet fin fin fin

--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -8,8 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <header>
          <h1>Sir Timothy "Tim" John Berners-Lee</h1>  
             <h2>El padre de la Web</h2>
+        </header>
             <img src="/ejercicio 2/berners-lee.jpg" alt="foto de John Berners-Lee">
           <p>TBL es un científico de la computación británico, nacido en Londres, Reino Unido, el 8 de junio de 1955. </p>
         <p>Es conocido como el padre de la Web, desde que estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989, mientras trabajaba en el <a href="">CERN</a></p>
