--- a/ejercicio 3/ejercicio3.html
+++ b/ejercicio 3/ejercicio3.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html class="no-js"> 
+<html class="no-js" lang="es"> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Seat</title>
+        <meta name="description" content="creado en visual studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     </head>
     <body>
 
