--- a/ejercicio 2/ejercicio4.1.html
+++ b/ejercicio 2/ejercicio4.1.html
@@ -19,9 +19,10 @@
                 
 
           <p>TBL es un científico de la computación británico, nacido en Londres, Reino Unido, el 8 de junio de 1955. </p>
-        <p>Es conocido como el padre de la Web, desde que estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989, mientras trabajaba en el <a href="">CERN</a></p>
-        <p>Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee y su grupo desarrollaron las ideas fundamentales que estructuran la web:</p>
-        <br>
+        <p>Es conocido como el padre de la Web, desde que estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989,
+             mientras trabajaba en el <a href="">CERN</a></p>
+        <p>Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, 
+            Berners-Lee y su grupo desarrollaron las ideas fundamentales que estructuran la web:</p>
         <ul>
              <li> el lenguaje de etiquetas de hipertexto o HTML (HyperText Markup Language)</li>
              <li>el protocolo HTTP (HyperText Transfer Protocol)</li>
