--- a/ejercicio 2/ejercicio4.1.html
+++ b/ejercicio 2/ejercicio4.1.html
@@ -6,6 +6,7 @@
         <title>Tim Berners-Lee</title>
         <meta name="description" content="creado con Visual Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Daniel García Lindo">
     </head>
     <body>
         <header>
