--- a/ejercicio 2/ejercicio4.1.html
+++ b/ejercicio 2/ejercicio4.1.html
@@ -7,7 +7,7 @@
         <meta name="description" content="creado con Visual Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel García Lindo">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/favicon.ico">
         
     </head>
     <body>
