ejercicio 4 complet fin fin fin finj

--- a/ejercicio 2/ejercicio4.1.html
+++ b/ejercicio 2/ejercicio4.1.html
@@ -15,6 +15,14 @@
          <h1>Sir Timothy "Tim" John Berners-Lee</h1>  
             <h2>El padre de la Web</h2>
         </header>
+        <nav>
+             <ul>
+                  <li><a href="">Home</a></li>
+                  <li><a href="">Gallery</a></li>
+                  <li><a href="">About</a></li>
+
+             </ul>
+        </nav>
         <section>
                  <article>
             <img src="/ejercicio 2/berners-lee.jpg" alt="foto de John Berners-Lee"
