--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -68,7 +68,7 @@ Hay muchas variaciones de los pasajes de Lorem Ipsum disponibles,Hay muchas vari
        <p><a href="#inicio">volver</a></p>
                  </section>
                  <aside>
-                     <p>Aqui podeis ver mas articulos en esta web <a href="www.google.com">clic aqui</a></p>
+                     <p>Aqui podeis ver mas articulos en esta web <a href="http://es.lipsum.com/">clic aqui</a></p>
                  </aside>
               
         </article>      
