--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="creado con visual studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia LIndo">
+        <meta name="keywords" content="red,internet">
     </head>
     <body>
         <header>
