--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -8,6 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia LIndo">
         <meta name="keywords" content="red,internet">
+        <style>
+            h1{color:red;
+            
+               }
+
+        </style>
     </head>
     <body>
         <header>
