--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -10,8 +10,12 @@
         <meta name="keywords" content="red,internet">
         <style>
             h1{color:red;
-            
+
                }
+               
+            h2{ color:khaki;
+
+              }
 
         </style>
     </head>
