--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>la web 2017</title>
         <meta name="description" content="creado con visual studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia LIndo">
@@ -12,7 +12,7 @@
             h1{color:red;
 
                }
-               
+
             h2{ color:khaki;
 
               }
