--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -8,14 +8,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia LIndo">
         <meta name="keywords" content="red,internet">
-        <style>
-            h1{color:red;
+        <style type="text/css">
+            h1{color:red; text-align:center;
 
                }
 
-            h2{ color:khaki;
+            h2{ color:khaki; text-align:center;
 
               }
+            p{font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+              font-size:18px;
+              font-style:oblique;
+               }
 
         </style>
     </head>
