--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -20,6 +20,10 @@
               font-size:18px;
               font-style:oblique;
                }
+            ul li{
+                text-align:center;
+
+            }
 
         </style>
     </head>
