--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -20,7 +20,7 @@
               font-size:18px;
               font-style:oblique;
                }
-            ul li{
+            ul li{ list-style:none;
                 text-align:center;
 
             }
