--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -25,6 +25,24 @@
 
             }
 
+            header{ background-color:cadetblue;
+               
+
+                }
+                #a1{background-color:lightblue;
+
+                }
+                #a2{background-color:aqua;
+
+                }
+                #a3{background-color:aquamarine;
+
+                }
+                footer{background-color:black;
+
+                }
+
+
         </style>
     </head>
     <body>
