ejercicio5 dia 5 de mayo 5.1

--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -38,6 +38,10 @@
                 #a3{background-color:aquamarine;
 
                 }
+                aside{background-color:cornflowerblue;
+
+                }
+
                 footer{background-color:black;
 
                 }
