--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -42,7 +42,7 @@
 
                 }
 
-                footer{background-color:black;
+                footer{background-color:silver;
 
                 }
 
