ejercicio 5 5 de mayo 5.5

--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -29,6 +29,15 @@
                
 
                 }
+                nav{background-color:blue;
+                    color:brown;
+
+                }
+                article{background-color:teal;
+
+                }
+
+
                 #a1{background-color:lightblue;
 
                 }
