--- a/ejercicio 5/ejercicio 5.html
+++ b/ejercicio 5/ejercicio 5.html
@@ -22,6 +22,7 @@
                }
             ul li{ list-style:none;
                 text-align:center;
+                color:brown;
 
             }
 
