ejercicoo 8 con css fin 5 de mayo

--- a/ejercicio 7/ejercicio 8.html
+++ b/ejercicio 7/ejercicio 8.html
@@ -89,7 +89,7 @@
 	<footer>
 		<hr>
 		<pre class="Autor_Biblio">
-			Aleajndro L. Cerezo
+			Daniel Garcia Lindo
 			Boracay
 			<a class="email" href="mailto:alce65@hotmail.es">alce65@hotmail.es</a>
 			Avda. de Bruselas
