ejercio 8 5 de mayo finalizado con colorines xd

--- a/ejercicio 7/ejercicio 8.html
+++ b/ejercicio 7/ejercicio 8.html
@@ -24,7 +24,7 @@
 
 	<article>
 			
-		<p>Ejemplo de clases con valor semántico. Los distintos elementos de cada registro han sido marcados como pertenecientes a alguna de las siguientes clases:</p>
+		<p class="colorido">Ejemplo de clases con valor semántico. Los distintos elementos de cada registro han sido marcados como pertenecientes a alguna de las siguientes clases:</p>
 		<ul>
 			<li>class="Titulo"</li>
 			<li>class="Tít_Original"</li>
@@ -33,7 +33,7 @@
 			<li>class="Editorial"</li>
 			<li>class="Fecha_Edicion"</li>
 		</ul>
-		<p>Más adelante se verá que, ademas del valor semántico, pueden recibir un determinado formato mediante los correspondientes estilos CSS</p>
+		<p class="colorido">Más adelante se verá que, ademas del valor semántico, pueden recibir un determinado formato mediante los correspondientes estilos CSS</p>
 		<hr>
 		<img src="image/img_500.jpg">
 		<!-- Para cada elemento de la bibliografía usaremos el siguiente formato
