prueba @font face

--- a/ejercicio 8/ejercicio9.html
+++ b/ejercicio 8/ejercicio9.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia Lindo">
         <link href="/ejercicio 8/estilo/ejercicio9.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
     </head>
     <body>
         <header>
