--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -6,6 +6,16 @@
         <title>Tim Berners-Lee</title>
         <meta name="description" content="creado con Visual Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Daniel Garcia Lindo">
+        <style>
+            h1{color: brown; text-shadow:5px 5px 5px crimson ;}
+            p{ text-align: center;}
+            img{ width: 150px; height: 250px;
+                margin-left: 50px; margin-right: 50px;}
+            ul li{ text-align: center;}
+
+
+        </style>
     </head>
     <body>
         <header>
