--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -11,7 +11,7 @@
             h1{color: brown; text-shadow:5px 5px 5px crimson ;}
             p{ text-align: center;}
             img{ width: 150px; height: 250px;
-                margin-left: 50px; margin-right: 50px;}
+                 align-content: center;}
             ul li{ text-align: center;}
 
 
