--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -12,6 +12,9 @@
             p{ text-align: center;}
             img{ width: 150px; height: 250px;
                  }
+                 ul{ width: 400px; height: 200px;
+                    border: 5px red;}
+
             ul li{ text-align: center;}
 
 
