--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel Garcia Lindo">
         <style>
-            h1{color: brown; text-shadow:5px 5px 5px crimson ;}
+            h1,h2{color: brown; text-shadow:5px 5px 5px crimson ; text-align: center;}
             p{ text-align: center;}
             img{ width: 150px; height: 250px;
                  }
