dia 9 de mayo 7

--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -16,7 +16,7 @@
 
             ul li{ text-align: center;
                   width: 400px; height: 200px;
-                    border: 5px red;}
+                    border: 5px 5px red;}
 
 
         </style>
