--- a/ejercicio 2/ejercicio2.html
+++ b/ejercicio 2/ejercicio2.html
@@ -16,7 +16,8 @@
 
             ul li{ text-align: center;
                   width: 400px; height: 200px;
-                    border: 5px 5px red;}
+                    border: 5px solid
+                     red;}
 
 
         </style>
@@ -32,11 +33,11 @@
         <p>Es conocido como el padre de la Web, desde que estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989, mientras trabajaba en el <a href="">CERN</a></p>
         <p>Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee y su grupo desarrollaron las ideas fundamentales que estructuran la web:</p>
         <br>
-        <ul>
+        <center><ul>
              <li> el lenguaje de etiquetas de hipertexto o HTML (HyperText Markup Language)</li>
              <li>el protocolo HTTP (HyperText Transfer Protocol)</li>
              <li> el sistema de localización de objetos en la web URL (Uniform Resource Locator)</li>
-        </ul>
+        </ul></center>
          <p>En octubre de 1994 asumió la dirección del Consorcio de la World Wide Web <a href="">W3C</a> con sede en el MIT, para supervisar y estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet. </p>
         <p>Más información en la <a href="www.wikipedia.com"> Wikipedia</a> </p>
     </body>
