9 de mayo colores

--- a/ejercicio 8/ejercicio11.html
+++ b/ejercicio 8/ejercicio11.html
@@ -9,8 +9,12 @@
 
 
         <style>
-               
-               
+              #d1{border-left:50px solid red;
+                  border-top:50px solid transparent;
+                  border-bottom:50px solid transparent;
+                  border-right:100px solid transparent;
+                  } 
+               hr{background-color: orange; height: 5px; width: 100%;}
         </style>
     </head>
     <body>
@@ -22,6 +26,7 @@
                      </p>
                 </div>
           </header>
+                   <hr>
                    <article>
                             <div id="d2">
                                   <p>
