--- a/ejercicio 8/ejericio12.html
+++ b/ejercicio 8/ejericio12.html
@@ -14,18 +14,22 @@
          top: 50px;
          left: 50px;
          border:solid blue 5px;
-         border-radius: 5px 5px 5px 5px; }
+         border-radius: 5px 5px 5px 5px;
+         z-index: 2; }
 
         #d2{width: 200px; height: 200px;
            background-color: aqua;
            position:absolute;
            top: 260px;
            left: 260px;
+           z-index: 2;
            }
         #d3{ width: 300px; height: 100px;
-           background-color: blueviolet;
+           background-color:rgba(0,255,0,0.2);
+           position: absolute;
            top:10px;
-           left: 10px;}
+           left: 10px;
+           z-index: 6;}
 
 </style>
     </head>
