--- a/ejercicio 8/ejercicio14.html
+++ b/ejercicio 8/ejercicio14.html
@@ -9,18 +9,19 @@
         <meta name="author" content="Daniel Garcia Lindo">
         <style>
             
-         div{width: 50%; height: 45%;}
+         div{width: 60%; height: 60%;}
          .caja{width: 100%; height: 100%;}
          .caja1{width: 100%;height: 100%;
              background-color: red;
                 position: relative;
                 top:20px; }
-         .caja2{background-color: blue;
+         .caja2{width: 100%;height: 100%;
+             background-color: blue;
                position: relative;
-               top:20px;}
+               top:30px;}
          .caja3{background-color: yellow;
                position: relative;
-               top:20px;}
+               top:40px;}
          .caja4{width: 100%;
                 position: relative;
                 top:200px;
