--- a/Danielgarcialindo/elpais.html
+++ b/Danielgarcialindo/elpais.html
@@ -7,7 +7,7 @@
         <title>España</title>
         <meta name="description" content="Creado con visual studio code">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Daniel Garcia lindo">
+        <meta name="author" content="Danierl Garcia lindo">
         <link href="estilo/spain.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
@@ -28,7 +28,7 @@
 
                   </div>
                    
-                   <div id="foto"><img src="../ejercicio 9/images/españa.png" alt="españa"></div>
+                   <div id="foto"><img src="../images/españa.png" alt="españa"></div>
 
                    <hr>
                   <div id="histo">
