--- a/ejercicio12/clase.html
+++ b/ejercicio12/clase.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html><!--html:5 +tab para usar emmet-->
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/inicio.css">
 </head>
 <body>
- 
-    
+      <header>
+
+      </header>
+      <article>
+          <p>hola</p>
+      </article>
+
+
+
 </body>
 </html>
